# Cost-Efficient-RAG-System

./: README.md  pyproject.toml  requirements.txt
corpus/: api_reference.md  architecture_overview.md  data_retention_policy.md  onboarding_guide.html  pricing.md  security_compliance.md  troubleshooting_faq.md
eval/: cost_model.py  eval_dataset.json  metrics.py  resolve_gold.py  run_eval.py
eval/qdrant_eval_data/: meta.json
eval/qdrant_eval_data/collection/rag_chunks/: storage.sqlite
eval/results/: answer_metrics.json  cost_latency.md  eval_queries.jsonl  eval_summary.md  retrieval_metrics.json
logs/: queries.jsonl
qdrant_data/collection/: meta.json
qdrant_data/collection/rag_chunks/: storage.sqlite
scripts/: generate_sla_pdf.py
src/ragapp/: api.py  bootstrap.py  chunking.py  cli.py  config.py  embeddings.py  ingest.py  llm.py  loaders.py  logging_utils.py  rag_service.py  vectorstore.py
src/ragapp.egg.info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_api.py  test_chunking.py  test_idempotent_ingest.py  test_loaders.py  test_metrics.py
